# totos-kiosk

./: .dockerignore  .gitignore  .gitmodules  README.md  README.txt  _README.md  balena.yml  docker-compose.yml  file_structure.txt  package-lock.json  weird
app/: .env.example  .gitignore  Dockerfile  Dockerfile.template  README.txt  next-sitemap.config.js  next.config.mjs  package.json  start.sh  tsconfig.json
app/certs/: localhost-key.pem  localhost.pem
app/hejtoto.com/: .env  .env 2  .gitignore  README.md  __.env  __.env.local  next.config.mjs  package.json  server.js  tsconfig.json
app/internationalization/: i18n.tsx
app/pages/: _app.tsx  _document.tsx  index.tsx
app/public/: sitemap-0.xml  sw.js
app/scripts/: server.js
app/src/: constants.ts
balena-display/: Dockerfile.template
balena-display/RPI5/: 10-monitor.conf
balena-display/scripts/: entrypoint.sh  start_server.sh
browser/: Dockerfile.template  README  package-lock.json
browser-2.4.7/: Dockerfile.template
browser-2.4.7/src/: start.sh
browser-2.7.0/: Dockerfile.template  README.txt  debug.txt  test.js  xorg.conf
browser-2.7.0_2/: Dockerfile.template  README.txt
browser-orginal/: Dockerfile.template  README
browser/src/: server.js  (+2 more)
build-rpi5/: CMakeCache.txt
camera/: Dockerfile.template  entrypoint.sh  requirements.txt  stream.py
certs/: Dockerfile.init-certs  README  generate_certs.sh
devices/: Dockerfile  Dockerfile.template  main.py  main_old.py  main_teensy.py  main_websocket.py  main_websocketServer.py  main_zvt.py  main_zvt_websocket.py  mainusb.py  readme.txt  receipt.txt  requirements.txt  start.sh
devices/payment/zvt++/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile.template  Makefile  README.txt  _CMakeLists.txt  _cmake_install.cmake  cmake_install.cmake  entrypoint.sh  hosts.json  package.json  receipt.txt  zvt++
devices/payment/zvt++/_builds/: Anleitung amd64 Windows debian.txt  Anleitung build neu.txt  Anleitung debian.txt
devices/payment/zvt++/_builds/arm-build v1.1.7/: libshared-zvt++.dylib
devices/payment/zvt++/_builds/debian-build v1.1.7/: CMakeCache.txt  cmake_install.cmake  zvt++
devices/payment/zvt++/_builds/pi5-build v.1.1.7/: Makefile  cmake_install.cmake  zvt++
devices/payment/zvt++/_builds/x64-build v1.1.7/: Makefile
devices/payment/zvt++/_debian build/: Anleitung.txt
devices/payment/zvt++/src/: Apdu.cpp  Apdu.hpp  Bmp.cpp  Bmp.hpp  HexToByte.hpp  LLVar.hpp  Tag.cpp  Tag.hpp  Tests.cpp  Tests.hpp  Tlv.cpp  Utils.hpp  zvt++.cpp  zvt++.hpp
devices/payment/zvt++/src/bmps/: IndividualTotals.cpp  IndividualTotals.hpp
devices/payment/zvt++/src/cmds/: Abort.cpp  Abort.hpp  Ack.cpp  BlockReceipt.cpp  BookTotal.cpp  BookTotal.hpp  CompletionForStatus.cpp  CompletionForStatus.hpp  ConfigFeig.hpp  Diagnosis.cpp  Diagnosis.hpp  DisplayText.hpp  EndOfDay.cpp  EndOfDay.hpp  FeigRegister.hpp  Initialisation.cpp  IntermediateStatusInfo.cpp  LogOff.cpp  PPAuth.cpp  PPAuth.hpp  PrintLine.hpp  PrintSystemConfig.cpp  PrintSystemConfig.hpp  Register.cpp  Register.hpp  RepeatReceipt.hpp  Reservation.cpp  Reservation.hpp  Reversal.cpp  Status.hpp  StatusInfo.cpp  TurnoverTotals.cpp
devices/payment/zvt++/src/cmds/error/: RegisterErrorCategory.hpp  StatusEnquiryErrorCategory.hpp  StatusErrorCategory.hpp
devices/payment/zvt++/src/converter/: EmvTagConverter.cpp  EmvTagConverter.hpp  TagValueConverter.hpp
devices/payment/zvt++/src/gicc/: Gicc.cpp  Gicc.hpp
devices/payment/zvt++/src/nexo/: SupportedServices.hpp
devices/payment/zvt++/stuff/: README.txt  reservierung.nok.txt  warenausgabe.nok.txt  warenausgabe.ok.txt  zvt_traces.tgz
display/: ###docker-composeyml  Dockerfile.template
display-orginal/: Dockerfile.template
display-pi5/: Dockerfile.template
kiosk/: Dockerfile  dbus.conf  electron-builder.yml  keyboard_preseed.cfg  package-lock.json  package.json  start.sh  tsconfig.json
orchester/: Dockerfile  Dockerfile.template  find_ip_by_mac.py  main.py  main2.py  main3.py  requirements.txt
toto/: Dockerfile  Dockerfile.template  _handleScriptFiles.py  _websocketCommunication.py  face.py  facetracking.py  facetracking01.py  facetracking02.py  facetracking03..py  findCamera.py  handleScriptFiles.py  main.py  main2.py  main4.py  readme.md  requirements.txt  test.py  testserial.py
(+557 files in other folders)
